# uart_logger

./: CLAUDE.md  Cargo.toml  README.md  build.rs  build_uf2.sh  uart_logger.uf2  uart_logger_ns.uf2  uart_logger_rp2040.uf2
.cargo/: config.toml
src/: config.rs  led.rs  main.rs  sd_writer.rs
